--- a/Cafe_Kiosk/src/main/resources/application.properties
+++ b/Cafe_Kiosk/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-# 서버 포트 변경
+# 서버 주소
 server.port=80
-# 자동 리로드
+#
 spring.devtools.livereload.enabled=true
 #Maria DataSource
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
@@ -11,9 +11,9 @@ spring.datasource.username=javauser
 spring.datasource.password=123456
 
 #=============================================================================
-#mybatis 설정 시작
-#VO의 위치를 지정한다.
+#mybatis ì¤ì  ìì
+#VOì ìì¹ë¥¼ ì§ì íë¤.
 mybatis.type-aliases-package=kr.hizju.cafekiosk.vo
-#Mapper의 위치를 지정한다.
+#Mapperì ìì¹ë¥¼ ì§ì íë¤.
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 #=============================================================================
