--- a/Cafe_Kiosk/src/main/resources/application.properties
+++ b/Cafe_Kiosk/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.datasource.password=123456
 mybatis.type-aliases-package=kr.hizju.cafekiosk.vo
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 #=============================================================================
+# 파일 업로드
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=1MB
+
